--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
-{% include header.html %}
+
 <section class="main-content">
-      <h2>
-<a id="welcome-to-the-qbi-software-site" class="anchor" href="#welcome-to-the-qbi-software-site" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the QBI Software NEURON Tutorial</h2>
+      <h2>Welcome to the QBI Software NEURON Tutorial</h2>
 
 <p>NEURON is a powerful simulation environment, allowing the detailed simulation of the nervous system in a wide range of scales - from channels to individual neurons to networks of neurons. In addition to the thousands of studies that have used NEURON, it is also the simulation environment used for large-scale projects such as the Blue Brain/Human Brain Projects. We are offering an introductory workshop based on the recommended tutorials as well as actual experience used in generating models for research publications.  </p><p>
 The workshop will be primarily run by Lee Fletcher and Liz Cooper-Williams, but anyone with experience is more than welcome to assist. This would be a one day workshop running through the basics of the NEURON interface then working up to loading experimental data and running simulations. NEURON software is freely available from https://www.neuron.yale.edu/neuron/.</p>
 
-<h3> <a id="applications" class="anchor" href="#syllabus"
-aria-hidden="true"><span aria-hidden="true" class="octicon
-octicon-link"></span></a>Course syllabus</h3> 
+<h3>Course syllabus</h3> 
 <div class="syllabus"> 
 <table class="table table-striped">
 	<thead>
@@ -26,4 +23,3 @@ octicon-link"></span></a>Course syllabus</h3>
 </table> 
 </div> 
 </section> 
-{%include footer.html %}
