--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html>
 	<head>
 		<title>QBI NEURON Tutorial</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
 		<nav>
