--- a/index.html
+++ b/index.html
@@ -1,22 +1,7 @@
-
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>QBI NEURON Tutorial</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/setup">Setup</a></li>
-        		<li><a href="/lesson-intro">Lesson:Intro</a></li>
-        		<li><a href="/lesson-model">Lesson:Models</a></li>
-			<li><a href="/lesson-network">Lesson:Network</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
+---
+layout: default
+title: QBI NEURON Tutorial
+---
 <section class="main-content">
       <h2>Welcome to the QBI Software NEURON Tutorial</h2>
 
@@ -41,4 +26,3 @@ The workshop will be primarily run by Lee Fletcher and Liz Cooper-Williams, but 
 </table> 
 </div> 
 </section> 
-</div></body></html>
